stylesheet.css
* {
  margin: 0;
  padding: 0;
}
body {
        padding: 2em;
        font-family: 'Georgia', serif;
        font-size: 16px;
        text-align: left;
        max-width: 380px;
      }
img {
  max-width: 380px;
  width: 100%;
  margin-bottom: 1em;
}
h1 {
  font-size: 1em;
  margin-bottom: .4em;
}
h2 {
  font-size: .925em;
  margin-bottom: 1.8em;
  font-weight: normal;
  line-height: 1.6em;
}

p {
  font-size: .925em;
  margin-bottom: 1.5em;
  line-height: 1.8em;
}
#cv {
  font-size: .925em;
  margin-bottom: 2em;
}
.organization h4 {
  font-size: .925em;
  margin-bottom: 0px;
  font-weight: normal;
  padding-right: .2em;
  display: inline;
}
h4.available {
  font-weight: bold;
}
#otherstuff {
  font-size: .925em;
}
#otherstuff h4 {
  font-size: .925em;
  margin-bottom: 1em;
}
a {
  color: blue;
}
a.visit {
  color: blue;
}
p.date {
  color: #919191;f
  display: inline-block;
  margin-bottom: .4em;
  display: inline;
}

.section {
  margin-bottom: 1em;
}

